--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -4,6 +4,6 @@
             android:angle="135"
             android:centerColor="@color/colorAccent"
             android:endColor="@color/textColorAccent"
-            android:startColor="@color/colorPrimary"
+            android:startColor="@color/colorAccent"
             android:type="linear" />
 </shape>
