new fragment + refactoring

--- a/app/src/main/res/layout/book_info_fragment.xml
+++ b/app/src/main/res/layout/book_info_fragment.xml
@@ -50,7 +50,7 @@
                         android:layout_margin="@dimen/fab_margin"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@{bookInfo.title, default = Harry_Potter_and }"
+                        android:text="@{bookInfo.title, default = not_found }"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/coverBookImageView" />
@@ -70,7 +70,7 @@
                 <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="24dp"
+                        android:layout_margin="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
