--- a/app/src/main/res/layout/fragment_booksearch.xml
+++ b/app/src/main/res/layout/fragment_booksearch.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="8dp"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 android:src="@drawable/books" />
 
     </LinearLayout>
