--- a/app/src/main/res/menu/menu_book_info_collection.xml
+++ b/app/src/main/res/menu/menu_book_info_collection.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".BookInfoFragment">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <item
             android:id="@+id/eventShare"
             android:icon="@drawable/ic_baseline_share_24"
             android:title="Share"
             app:showAsAction="always" />
-
     <item
-            android:id="@+id/addToCollection"
-            android:icon="@drawable/ic_baseline_add_24"
-            android:title="Add to Collection"
+            android:id="@+id/removeFromCollection"
+            android:icon="@drawable/ic_baseline_delete_24"
+            android:title="Remove from Collection"
             app:showAsAction="always" />
-   
+
 </menu>
