--- a/app/src/main/res/layout/book_info_fragment.xml
+++ b/app/src/main/res/layout/book_info_fragment.xml
@@ -47,25 +47,25 @@
                 <TextView
                         android:id="@+id/bookTitleTextView"
                         style="@style/MainBookInformation"
-                        android:layout_margin="@dimen/fab_margin"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/fab_margin"
                         android:text="@{bookInfo.title, default = not_found }"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/coverBookImageView" />
 
                 <ImageButton
                         android:id="@+id/favoritesButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/lightMediumGray"
                         android:layout_marginTop="8dp"
-                        tools:src="@drawable/ic_baseline_favorite_24"
+                        android:background="@color/lightMediumGray"
                         android:contentDescription="@string/favorites_button"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/bookTitleTextView" />
+                        app:layout_constraintTop_toBottomOf="@+id/bookTitleTextView"
+                        tools:src="@drawable/ic_baseline_favorite_24" />
 
                 <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
