--- a/app/src/main/res/menu/menu_book_info_collection.xml
+++ b/app/src/main/res/menu/menu_book_info_collection.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+            android:id="@+id/removeFromCollection"
+            android:icon="@drawable/ic_baseline_delete_24"
+            android:title="@string/remove_from_collection"
+            app:showAsAction="ifRoom" />
 
     <item
             android:id="@+id/eventShare"
             android:icon="@drawable/ic_baseline_share_24"
-            android:title="Share"
-            app:showAsAction="always" />
+            android:title="@string/share"
+            app:showAsAction="ifRoom" />
+
     <item
-            android:id="@+id/removeFromCollection"
-            android:icon="@drawable/ic_baseline_delete_24"
-            android:title="Remove from Collection"
-            app:showAsAction="always" />
+            android:id="@+id/readBook"
+            android:title="@string/go_to_reading" />
 
 </menu>
