--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,8 @@
     </style>
 
     <style name="ThemeOverlay.AppCompat.navTheme">
-        <item name="colorPrimary">@color/colorAccent</item>
-        <item name="colorControlHighlight">@color/favoriteItem</item>
+        <item name="colorPrimary">@color/textColorAccent</item>
+        <item name="colorControlHighlight">@color/lightMediumGray</item>
     </style>
 
 
