--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorPrimary">#FDFDFD</color>
+    <color name="colorPrimaryDark">#A3A0A0</color>
     <color name="colorAccent">#FF9800</color>
     <color name="textColorAccent">#EF6C00</color>
 
