--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,14 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-<!--         Customize your theme here. -->
-        <item name="colorPrimary">#FDFDFD</item>
-        <item name="colorPrimaryDark">#A3A0A0</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
-        <item name="colorPrimary">#FDFDFD</item>
-        <item name="colorPrimaryDark">#A3A0A0</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -23,7 +22,7 @@
         <item name="colorControlHighlight">@color/lightMediumGray</item>
     </style>
 
-
+    <!-- Base component styles. -->
     <style name="MainBookInformation">
         <item name="paddingStart">18dp</item>
         <item name="paddingEnd">18dp</item>
@@ -54,6 +53,5 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
     </style>
-
 
 </resources>
