--- a/app/src/main/res/layout/fragment_book_collection.xml
+++ b/app/src/main/res/layout/fragment_book_collection.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/bookCollectionInfoText">
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/collectionRecyclerView"
